# ai-builder

./: .env.example  .gitignore  LICENSE  app.py  main.py  pyproject.toml
Week1/: AI-model-comparison-sheet.md
Week3/: Workflow-Agent-whentouse.pptx
ollama_client/: ollama_client.py
